syntax = "proto3";

package users;

service UserManager {
  rpc GetUser(User) returns (User) {};
  rpc GetUserByUsername (User) returns (User) {};
  rpc GetUserByEmail (User) returns (User) {};
  rpc ListUsers (Empty) returns (UserList) {};
  rpc UpdateUser (User) returns (User) {};
  rpc DeleteUser (User) returns (User) {};
}

message Empty {}

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string first_name = 4;
  string last_name = 5;
}

message UserList {
  repeated User users = 1;
}